# zhuhana

./: .gitignore  README.md  skaffold.yaml
Backend/Outbound/: README.md  go.mod  go.sum  main.go
Backend/Task/: requirements.txt
Backend/UserModel/: Dockerfile  requirements.txt
Backend/algonexus/: Justfile  README.md  go.mod  go.sum  main.go
Backend/cortex/: Cargo.toml  README.md
Backend/cortex/.sqlx/: query-4be8e2929696333347d33752ba055a18b9264c429b11037ed590aa341f1ff2a8.json
Backend/cortex/docker-compose/: docker-compose-local.yaml  docker-compose-ollama-local.yaml
Backend/cortex/dockerfiles/: Dockerfile  OllamaDockerfile
Backend/cortex/migrations/: 20250713095209_init_sessions_messages.sql  20250713125154_add_model_and_tokens_to_messages.sql
Backend/cortex/src/: consts.rs  db.rs  main.rs  redis.rs  state.rs  tables.rs
Backend/cortex/src/api/: add_messages.rs  ask.rs  get_messages.rs  get_sessions.rs  handler.rs  mod.rs  rate_limiter.rs  session.rs
Backend/cortex/src/auth/: client.rs  middleware.rs  types.rs
Backend/cortex/src/ollama/: client.rs
Backend/forge/: README.md  go.mod  go.sum  main.go
Backend/governor/: Dockerfile  README.md  go.mod  go.sum  main.go  manage.py
Backend/orchestrator/: README.md  go.mod  go.sum  main.go
Backend/secretsmanager/: README.md  go.mod  go.sum  main.go
Backend/uasam/: README.md  go.mod  go.sum  main.go
Frontend/: Dockerfile  README.md  package-lock.json  package.json
Frontend/docker-compose/: docker-compose-local.yml
Frontend/frontend/: package-lock.json  package.json
Frontend/lsp-server/: create-init-request.js  index.js  lspClient.js  main_editor_code.py  package-lock.json  package.json  pyrightconfig.json
Frontend/src/: index.ts
Frontend/zhuhana-frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
Kubernetes/algonexus/: clickhouse.yaml  configmap.yaml  deployment.yaml  kafka.yaml  postgres.yaml  redis.yaml  service.yaml  tabix.yaml  zookeeper.yaml
Kubernetes/forge/: configmap.yaml  deployment.yaml  postgres.yaml  redis.yaml  service.yaml
Kubernetes/gateway/: algonexus-ingress.yaml  (+1 more)
(+564 files in other folders)
