[package]
name = "cortex"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
hyper = { version = "1.0", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1"
tower = "0.4"
tower-service = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }


# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
